alignment fixes

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ body {
     padding: 0px;
 }
 
+p {
+    margin: 0px;
+}
+
 .header-content h1{
     padding: 0px;
     margin: 0px;
@@ -36,7 +40,7 @@ body {
     flex-direction: column;
     gap: 100px;
     justify-content: space-between;
-    padding: 0px 250px 125px;
+    padding: 0px 250px 75px;
 }
 
 .header-container{
@@ -53,6 +57,7 @@ body {
 .header-content{
     display:flex;
     flex:1;
+    gap: 15px;
 }
 
 .text-img{
@@ -62,7 +67,8 @@ body {
 .img-placeholder{
     display: flex;
     flex: 1;
-    background: lightgray;
+    background: white;
+    opacity: 50%;
     align-items: center;
     justify-content: center;
     height: 400px;
